force-app/main/default/objects/Webshop_User__c/Webshop_User__c.object-meta.xml
<CustomObject>
    <description>Webshop User</description>
    <label>Webshop User</label>
    <nameField>
        <displayFormat>WUN-{0000}</displayFormat>
        <label>Webshop User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webshop Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>