force-app/main/default/objects/Webshop_User__c/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Webshop Lead is converted?</description>
    <label>Converted</label>
    <type>Checkbox</type>
</CustomField>