force-app/main/default/objects/Webshop_User__c/fields/Failed_Login_Count__c.field-meta.xml
<CustomField>
    <fullName>Failed_Login_Count__c</fullName>
    <description>Failed Login Count</description>
    <label>Failed Login Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>