force-app/main/default/objects/Webshop_User__c/fields/Last_Login_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_At__c</fullName>
    <description>Last Login At datetime</description>
    <label>Last Login At</label>
    <type>DateTime</type>
</CustomField>