force-app/main/default/objects/Webshop_User__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Webshop Users</relationshipLabel>
    <relationshipName>Webshop_Users</relationshipName>
    <type>Lookup</type>
</CustomField>