force-app/main/default/objects/Webshop_User__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Webshop Users</relationshipLabel>
    <relationshipName>Webshop_Users</relationshipName>
    <type>Lookup</type>
</CustomField>