force-app/main/default/objects/Webshop_User__c/fields/Password_Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Password_Changed_At__c</fullName>
    <description>Password Changed At datetime</description>
    <label>Password Changed At</label>
    <type>DateTime</type>
</CustomField>