force-app/main/default/objects/Webshop_User__c/fields/Password_Hash__c.field-meta.xml
<CustomField>
    <fullName>Password_Hash__c</fullName>
    <description>Password Hash</description>
    <label>Password Hash</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>