force-app/main/default/objects/Webshop_User__c/fields/Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Webshop_Users</relationshipName>
    <type>Lookup</type>
</CustomField>