force-app/main/default/objects/Webshop_User__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>